@@ -1,3 +1,11 @@
+2022-11-29T16:20:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3575971192 # 1073
+* notice: last 14d: unq all: 7 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 383 678 / 401 713
+* notice: next accum: outdated-unq outdated-all / unq all: 385 682 / 402 716
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-15] / []
+
 2022-11-29T08:18:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3572234918 # 1072
 * notice: last 14d: unq all: 7 35
